--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vuetify": "^0.17.7"
   }
 }
