--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "eslint-plugin-vue": "^4.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vuetify": "^0.17.7"
+    "vuetify": "^1.0.0-beta.6"
   }
 }
