--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jerick Labasan <jeck.labasan@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env PORT=3333 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "node-sass": "^4.7.2",
-    "nuxt": "^1.0.0",
+    "npm": "^6.0.0",
+    "nuxt": "^1.4.0",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
@@ -25,7 +26,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vuetify": "^1.0.0-beta.6"
+    "stylus-loader": "^3.0.2",
+    "vuetify": "^1.0.17"
   }
 }
